[fix] add min-height to results header to avoid overlap

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -289,6 +289,10 @@ table {
     }
 }
 
+.results-header {
+    min-height: 3em;
+}
+
 .date-filters {
     input {
         width: auto;
